# ocr2pdf

./: .gitignore  pyproject.toml
src/ocr2pdf/: __main__.py  ocr2pdf.py
src/ocr2pdf/common/: geometry.py  lazyproperty.py  settings.py  utils.py
src/ocr2pdf/ocr/ms/: page.py
