[project]
name = "ocr2pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cattrs>=25.1.1",
    "fire>=0.7.1",
    "fontmod",
    "pillow>=11.3.0",
]

[tool.uv.sources]
fontmod = { path = "../fontmod" }

# [project.scripts]
# ocr2pdf = "ocr2pdf.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
